# twitter-clone

./: Procfile  README.md  pyproject.toml  requirements.txt
authentication/: form.py  views.py
notification/: admin.py  models.py  views.py
notification/migrations/: 0001_initial.py  0002_auto_20210305_1126.py  0002_initial.py  0003_notifications_timestamp.py
templates/: addtweet.html  form.html  index.html  landing.html  notifications.html  tweet.html  user.html
tweet/: admin.py  form.py  models.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_user.py  0003_alter_tweet_timestamp.py  0003_auto_20210305_1356.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  models.py  views.py
twitteruser/migrations/: 0001_initial.py  0002_auto_20210302_1955.py  0003_auto_20210302_1956.py
