[tool.poetry]
name = "twitterclone-tiagocdr"
version = "0.1.0"
description = ""
authors = ["santi <tiagoelcoder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
